--- a/client/elements/transaction-view/transaction-view.html
+++ b/client/elements/transaction-view/transaction-view.html
@@ -2,11 +2,6 @@
 <dom-module id="transaction-view">
 	<template>
 		<style include="app-styles">
-			h3{
-				font-family: Roboto Mono;
-				font-weight:300;
-				text-transform: uppercase;
-			}
 			.scrolly-cell{
 				max-width: 50%;
 				max-height: 40px;
@@ -30,49 +25,51 @@
             <div class="xs12 s12 m12">
                 <paper-card>
                     <h3 class="my-card-title">Transaction <a href="">{{id}}</a></h3>
-                    <table>
-                        <tbody>
-                            <tr>
-                                <th>Sender</th>
-                                <td><a href="/account/{{transaction.sender}}">{{transaction.senderRS}}</a></td>
-                            </tr>
-                            <tr>
-                                <th>Amount</th>
-                                <td>{{_formatNQT(transaction.amountNQT)}} Burst</td>
-                            </tr>
-                            <tr>
-                                <th>Recipient</th>
-                                <td><a href="/account/{{transaction.recipient}}">{{transaction.recipientRS}}</a></td>
-                            </tr>
-                            <tr>
-                                <th>Time</th>
-                                <td>{{_time(transaction.timestamp)}}</td>
-                            </tr>
-                            <tr>
-                                <th>Fee</th>
-                                <td>{{_formatNQT(transaction.feeNQT)}} Burst</td>
-                            </tr>
-                            <tr>
-                                <th>Block height</th>
-                                <td>{{transaction.height}} (<a href="/block/{{transaction.height}}">{{transaction.block}}</a>)</td>
-                            </tr>
-                            <tr>
-                                <th>Type text</th>
-                                <td>{{_txType(transaction.type, transaction.subtype)}}</td>
-                            </tr>
-                            <tr>
-                                <th>Type</th>
-                                <td>{{transaction.type}}</td>
-                            </tr>
-                            <tr>
-                                <th>Subtype</th>
-                                <td>{{transaction.subtype}}</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <template is="dom-if" if="{{transaction.transaction}}">
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <th>Sender</th>
+                                    <td><a href="/account/{{transaction.sender}}">{{transaction.senderRS}}</a></td>
+                                </tr>
+                                <tr>
+                                    <th>Amount</th>
+                                    <td>{{_formatNQT(transaction.amountNQT)}} Burst</td>
+                                </tr>
+                                <tr>
+                                    <th>Recipient</th>
+                                    <td><a href="/account/{{transaction.recipient}}">{{transaction.recipientRS}}</a></td>
+                                </tr>
+                                <tr>
+                                    <th>Time</th>
+                                    <td>{{_time(transaction.timestamp)}}</td>
+                                </tr>
+                                <tr>
+                                    <th>Fee</th>
+                                    <td>{{_formatNQT(transaction.feeNQT)}} Burst</td>
+                                </tr>
+                                <tr>
+                                    <th>Block height</th>
+                                    <td>{{transaction.height}} (<a href="/block/{{transaction.height}}">{{transaction.block}}</a>)</td>
+                                </tr>
+                                <tr>
+                                    <th>Type text</th>
+                                    <td>{{_txType(transaction.type, transaction.subtype)}}</td>
+                                </tr>
+                                <tr>
+                                    <th>Type</th>
+                                    <td>{{transaction.type}}</td>
+                                </tr>
+                                <tr>
+                                    <th>Subtype</th>
+                                    <td>{{transaction.subtype}}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </template>
 
                     <template is="dom-if" if="{{transaction.attachment}}">
-                        <h3>Attachments</h3>
+                        <h3 class="my-card-title">Attachments</h3>
                         <table>
                             <tbody>
                                 <template is="dom-repeat" items="{{_toArray(transaction.attachment)}}">
