--- a/client/elements/transaction-view/transaction-view.html
+++ b/client/elements/transaction-view/transaction-view.html
@@ -50,7 +50,7 @@
                                 </tr>
                                 <tr>
                                     <th>Block height</th>
-                                    <td>{{transaction.height}} (<a href="/block/{{transaction.height}}">{{transaction.block}}</a>)</td>
+                                    <td>{{transaction.height}} (<a href="/block/{{transaction.block}}">{{transaction.block}}</a>)</td>
                                 </tr>
                                 <tr>
                                     <th>Type text</th>
