--- a/client/elements/burst-api/burst-api.html
+++ b/client/elements/burst-api/burst-api.html
@@ -2,6 +2,7 @@
 	<template>
 		
 		<iron-ajax
+                   id="burstApiRequest"
 				   auto
                    url="{{apiUrl}}"
 				   params="{{params}}"
@@ -33,7 +34,11 @@
 			},
 			_handleResponse: function(response){
 				//console.log(response);
-			}
+			},
+            
+            generateRequest(){
+                this.shadowRoot.querySelector("#burstApiRequest").generateRequest();
+            }
 		});
 	</script>
 </dom-module>
