--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -39,6 +39,7 @@
 <link rel="import" href="/client/bower_components/paper-tabs/paper-tab.html">
 <link rel="import" href="/client/bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="/client/bower_components/paper-progress/paper-progress.html">
+<link rel="import" href="/client/bower_components/paper-tooltip/paper-tooltip.html">
 <!--
 <link rel="import" href="/client/bower_components/highcharts-chart/highcharts-chart.html">
 <link rel="import" href="/client/bower_components/highcharts-chart/highcharts-stock.html"> -->
@@ -94,9 +95,3 @@
 <link rel="import" href="/client/elements/transaction-view/transaction-view.html">
 <link rel="import" href="/client/elements/block-view/block-view.html">
 <link rel="import" href="/client/elements/store-view/store-view.html">
-
-
-
-
-
-
