--- a/client/elements/transaction-view/transaction-queries.html
+++ b/client/elements/transaction-view/transaction-queries.html
@@ -3,19 +3,21 @@
 		
 		<template is="dom-if" if="{{pageready}}">
 			
-			<!--<app-pouchdb-document 
+			<app-pouchdb-document 
 								  db-name="{{newdburl}}" 
 								  doc-id="{{id}}" 
 								  data="{{transaction}}" 
 								  log="true"
 								  sequentialTransactions="true"
 								  >
-			</app-pouchdb-document>-->
+			</app-pouchdb-document>
 			
+<!--
 			<burst-api
 					   params="{{params}}"
 					   response="{{transaction}}"
 					   ></burst-api>
+-->
 			
 			<!--<iron-ajax
 					   auto
