Transaction view correct dom-if

--- a/client/elements/transaction-view/transaction-view.html
+++ b/client/elements/transaction-view/transaction-view.html
@@ -25,7 +25,7 @@
             <div class="xs12 s12 m12">
                 <paper-card>
                     <h3 class="my-card-title">Transaction <a href="">{{id}}</a></h3>
-                    <template is="dom-if" if="{{transaction.transaction}}">
+                    <template is="dom-if" if="{{transaction.block}}">
                         <table>
                             <tbody>
                                 <tr>
