All api docs. Minor changes. Only need to handle the ready event now...

--- a/client/elements/explorer-app.html
+++ b/client/elements/explorer-app.html
@@ -164,7 +164,7 @@
 <paper-icon-button suffix icon="search" on-tap="_search"></paper-icon-button>
 <input is="iron-input">
 </paper-input>-->   
-                    <paper-icon-button icon="refresh"></paper-icon-button>
+<!--                    <paper-icon-button icon="refresh"></paper-icon-button>-->
                     
                 </app-toolbar>
             </app-header>
